# Arduino_Braccio_plusplus

./: .codespellrc  .gitignore  LICENSE  README.md  library.properties
.github/workflows/: check-arduino.yml  compile-examples-private.yml  compile-examples.yml
examples/Braccio_Basic/: Braccio_Basic.ino
examples/Braccio_LearnByDoing/: Braccio_LearnByDoing.ino
examples/Braccio_Learn_and_Repeat/: AppState.cpp  AppState.h  Braccio_Learn_and_Repeat.ino
examples/Braccio_Record_and_Replay/: AppState.cpp  AppState.h  Braccio_Record_and_Replay.ino  README.md
examples/Braccio__Template/: Braccio__Template.ino
examples/Braccio_v2_rp2040/: Braccio_v2_rp2040.ino
examples/Braccio_v2_setID_interactive/: Braccio_v2_setID_interactive.ino
examples/Check_inputs/: Check_inputs.ino
examples/Controlling_Manually_Braccio/: AppState.cpp  AppState.h  Controlling_Manually_Braccio.ino
examples/LCD_Custom_Menu/: LCD_Custom_Menu.ino
examples/LCD_Menu_Joystick/: LCD_Menu_Joystick.ino
examples/LCD_Motors/: LCD_Motors.ino
examples/LearnByDoing/: LearnByDoing.ino
examples/Moving_Motors/: Moving_Motors.ino
examples/New_APIs/: New_APIs.ino
examples/Platform_Tutorials/lessons/01-programming-the-braccio-display/02_designing_the_button/: 02_designing_the_button.ino
examples/Platform_Tutorials/p03-learning-mode/01_Braccio_learning_mode/: 01_Braccio_learning_mode.ino
examples/ROS2_Braccio_Driver/: README.md  ROS2_Braccio_Driver.ino
examples/Testing_communications/: Testing_communications.ino
examples/Tools/Braccio_Basic/: Braccio_Basic.ino
examples/Tools/Factory_Set_ID_Interactive/: Factory_Set_ID_Interactive.ino
examples/Tools/Factory_Set_Initial_Servo_Position/: Factory_Set_Initial_Servo_Position.ino
examples/Tools/LCD_Custom_Menu/: LCD_Custom_Menu.ino
examples/Tools/LCD_Menu_Joystick/: LCD_Menu_Joystick.ino
examples/Tools/Test_Inputs/: Test_Inputs.ino
examples/Tools/Test_Motor_Angular_Control/: Test_Motor_Angular_Control.ino
examples/Tools/Test_Motor_Communication/: Test_Motor_Communication.ino
examples/micro-ros_publisher/: README.md
examples/tutorials/projects/p01-moving-braccio/01_aligning_braccio/: 01_aligning_braccio.ino
extras/: CMakeLists.txt
src/: Braccio++.cpp  Braccio++.h  Braccio.cpp  gif.c  lv_conf.h  menu.impl  splash.h
src/lib/PCINT/src/: pcint.h
src/lib/TFT_eSPI/: TFT_eSPI.cpp  TFT_eSPI.h  User_Setup.h  User_Setup_Select.h  keywords.txt
src/lib/TFT_eSPI/Extensions/: Sprite.cppx
src/lib/TFT_eSPI/Fonts/: Font16.h  Font32rle.h  Font64rle.h  Font72rle.h  Font72x53rle.h  Font7srle.h  glcdfont.cx
src/lib/TFT_eSPI/Processors/: TFT_eSPI_RP2040.h
src/lib/TFT_eSPI/TFT_Drivers/: ILI9163_Init.h  ILI9163_Rotation.h  ILI9225_Init.h  ILI9225_Rotation.h  ILI9486_Init.h  S6D02A1_Init.h  SSD1963_Init.h  ST7735_Init.h  ST7789_2_Defines.h  ST7789_Defines.h  ST7789_Init.h  ST7796_Init.h
src/lib/TFT_eSPI/User_Setups/: Setup24_ST7789.h  Setup51_LilyPi_ILI9481.h
src/lib/display/: Backlight.cpp  Backlight.h
src/lib/ioexpander/: I2Cdev.h  TCA6424A.cpp  TCA6424A.h
src/lib/motors/: RS485.cpp  RS485.h  SmartServo.cpp  SmartServo.cpp.impl  SmartServo.h  SmartServoConst.h
src/lib/powerdelivery/: FUSB302_UFP.c  FUSB302_UFP.cpp  FUSB302_UFP.h  PD_UFP.cpp  PD_UFP.h
(+80 files in other folders)
